<resources>
    <string name="app_name">PinUpp</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_message">Hi, Welcome to PinUpp. Let\'s create, share and impress with a smart cool profile!!</string>
    <string name="get_started">Get Started</string>
    <string name="preference_file_key">preference_pinupp_welcome</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_my_password"><u>Oops forgot my password!</u></string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Log out</string>
    <string name="action_logoff">Log off</string>

    <!-- TODO: Remove or change this placeholder mText -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_mobile">Mobile No.</string>
    <string name="hint_address">Address</string>
    <string name="hint_location">Location</string>
    <string name="hint_email">Email</string>
    <string name="hint_website">Website</string>
    <string name="hint_aboutme">About Me</string>
    <string name="hint_available_in">Available in</string>
    <string name="title_activity_profile_content">ProfileContentActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_adding">AddingActivity</string>
    <string name="hint_degree_name">name</string>
    <string name="hint_degree_year">year</string>
    <string name="hint_degree_institution">certified by</string>
    <string name="hint_new_skill">Enter the new skill</string>
    <string name="exp_spinner1_prompt">Years</string>
    <string name="contentDescPieChatBtn">generatePieChart</string>
    <string name="title_activity_preview_chart">PreviewChartActivity</string>
    <string name="hint_job_title">title</string>
    <string name="hint_company_name">company name</string>
    <string name="hint_job_year">select the date</string>
    <string name="logo_choose">Choose logo</string>
    <string name="hint_new_exp">New Experience</string>
    <string name="header_PinUP">PinUpp</string>
    <string name="example_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="title_current_position">Current position</string>
    <string name="title_project_experience">Project Experience</string>
    <string name="title_skill_set">Skill set</string>
    <string name="title_educational">Educational qualification</string>
</resources>
