<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_qualification_name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/add_qualification_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_degree_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_qualification_year_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_qualification_name_wrapper"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/add_qualification_year_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_degree_year" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_qualification_institution_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_qualification_year_wrapper"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/add_qualification_institution_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_degree_institution" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_qualification_dialog_logo_lbl"
            android:layout_gravity="center"
            android:text="Upload the company logo"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/add_qualification_dialog_logo_img"
            android:src="@android:drawable/btn_star_big_on"
            android:layout_marginLeft="25dp"
            />
    </LinearLayout>

</LinearLayout>