<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="@dimen/header_height_image"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/header_pinup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/header_PinUP"
                android:layout_centerInParent="true"
                android:textSize="@dimen/large_heading_size" />

        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/header_height_image"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="@dimen/header_height_image"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Surendhar Sooriyakumar"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/text__small_margin"
                android:padding="@dimen/text_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="iOS Developer"
                android:textColor="@color/white"
                android:padding="@dimen/text_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="@dimen/header_height_image"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text__small_margin"
                android:text="#603 Ag-112 Sector, Salt Lake, Kolkata"
                android:textColor="@color/white"
                android:padding="@dimen/text_padding" />

            <TextView
                android:id="@+id/header_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="09091234567"
                android:textColor="@color/white"
                android:padding="@dimen/text_padding" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="@dimen/header_height_image"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="suren@gmail.com"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/text__small_margin"
                android:padding="@dimen/text_padding" />

            <TextView
                android:id="@+id/header_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="google.com.vn"
                android:textColor="@color/white"
                android:padding="@dimen/text_padding" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/header_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oct 4,2016"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/text_padding"
                android:layout_centerInParent="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_available_in"
                android:padding="@dimen/text_padding"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:textSize="@dimen/small_heading_size" />
            <TextView
                android:id="@+id/header_location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kolkata"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/header_date_tv"
                android:layout_marginTop="@dimen/fab_margin"
                android:padding="@dimen/text_padding"
                android:layout_gravity="center_horizontal" />

        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/header_height_image_line"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.72"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:text="@string/example_text"
            android:padding="@dimen/text_padding" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dot" />


</LinearLayout>