<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_image"
        android:background="@color/colorPrimary"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/pinuppicon"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/header_pinup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/header_PinUP"
                android:textSize="@dimen/large_heading_size"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center|left"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preview_overall_name_tv"
                style="@style/PreviewText.Header.Name"
                android:text="Surendhar Sooriyakumar"/>

            <TextView
                android:id="@+id/preview_overall_position_tv"
                style="@style/PreviewText.Header.Position"
                android:layout_marginTop="15dp"
                android:text="iOS Developer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preview_overall_address_tv"
                style="@style/PreviewText.Header.Normal"
                android:text="#603 Ag-112 Sector, Salt Lake, Kolkata"
                android:drawableLeft="@drawable/ic_location_white"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/preview_overall_phone_tv"
                style="@style/PreviewText.Header.Normal"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_phone_white"
                android:drawablePadding="5dp"
                android:text="09091234567"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preview_overall_email_tv"
                style="@style/PreviewText.Header.Normal"
                android:drawableLeft="@drawable/ic_at_sign_white"
                android:drawablePadding="5dp"
                android:text="suren@gmail.com"/>

            <TextView
                android:id="@+id/preview_overall_link_tv"
                android:drawableLeft="@drawable/ic_link_white"
                android:drawablePadding="5dp"
                android:layout_marginTop="15dp"
                style="@style/PreviewText.Header.Normal"
                android:text="google.com.vn"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                style="@style/PreviewText.Normal"
                android:text="@string/hint_available_in"/>

            <TextView
                android:id="@+id/preview_overall_available_in_tv"
                style="@style/PreviewText.Position"
                android:text="Oct 4,2016"/>

            <TextView
                android:id="@+id/preview_overall_available_from_tv"
                style="@style/PreviewText.Normal"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_location_black"
                android:drawablePadding="5dp"
                android:text="Kolkata"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/preview_overall_desc_tv"
            style="@style/PreviewText.Desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/example_text"
            android:paddingTop="@dimen/text_padding"
            android:paddingLeft="@dimen/text_padding"
            android:paddingBottom="@dimen/text_padding"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_centerInParent="true"
            android:src="@drawable/dot"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_cut"/>
    </RelativeLayout>


</LinearLayout>